crates/protocols/src/snapshots/tiygate_protocols__chat_completions__tests__snapshot_decode_request.snap
---
source: crates/protocols/src/chat_completions.rs
expression: ir
---
IrRequest {
    model: "gpt-4o",
    system: Some(
        "You are helpful.",
    ),
    messages: [
        Message {
            role: User,
            content: [
                Text {
                    text: "Hello",
                    annotations: None,
                },
            ],
        },
    ],
    tools: [],
    params: GenerationParams {
        max_tokens: Some(
            100,
        ),
        temperature: Some(
            0.7,
        ),
        top_p: None,
        top_k: None,
        stop: [],
        frequency_penalty: None,
        presence_penalty: None,
        seed: None,
        thinking: None,
    },
    response_format: None,
    stream: false,
    ingress_protocol: ProtocolEndpoint {
        suite: OpenAiCompatible,
        name: "chat-completions",
        version: "v1",
    },
    metadata: None,
    extensions: {},
}
