crates/protocols/src/snapshots/tiygate_protocols__chat_completions__tests__snapshot_decode_tool_request.snap
---
source: crates/protocols/src/chat_completions.rs
expression: ir
---
IrRequest {
    model: "gpt-4o",
    system: None,
    messages: [
        Message {
            role: User,
            content: [
                Text {
                    text: "What is the weather?",
                    annotations: None,
                },
            ],
        },
    ],
    tools: [
        Tool {
            name: "get_weather",
            description: Some(
                "Get weather",
            ),
            parameters: Some(
                Object {
                    "properties": Object {
                        "city": Object {
                            "type": String("string"),
                        },
                    },
                    "type": String("object"),
                },
            ),
            required: false,
        },
    ],
    params: GenerationParams {
        max_tokens: None,
        temperature: None,
        top_p: None,
        top_k: None,
        stop: [],
        frequency_penalty: None,
        presence_penalty: None,
        seed: None,
        thinking: None,
    },
    response_format: None,
    stream: false,
    ingress_protocol: ProtocolEndpoint {
        suite: OpenAiCompatible,
        name: "chat-completions",
        version: "v1",
    },
    metadata: None,
    extensions: {
        "tool_choice": String("auto"),
    },
}
